[gd_scene load_steps=7 format=3 uid="uid://brnkvvapmt4rg"]

[ext_resource type="Script" path="res://entities/Player.gd" id="1_yfawk"]
[ext_resource type="Texture2D" uid="uid://j5dyyrm4aik2" path="res://entities/player/player.png" id="2_5m0uq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w1bxj"]
atlas = ExtResource("2_5m0uq")
region = Rect2(0, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_de2wv"]
atlas = ExtResource("2_5m0uq")
region = Rect2(20, 0, 20, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_3ibvi"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_w1bxj")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_de2wv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m06ch"]
size = Vector2(18, 18)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_yfawk")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3ibvi")
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(10, 10)
shape = SubResource("RectangleShape2D_m06ch")

[node name="RayCasts" type="Node2D" parent="."]

[node name="RayCastUp" type="RayCast2D" parent="RayCasts"]
position = Vector2(10, 10)
target_position = Vector2(0, -20)

[node name="RayCastLeft" type="RayCast2D" parent="RayCasts"]
position = Vector2(10, 10)
target_position = Vector2(-20, 0)

[node name="RayCastDown" type="RayCast2D" parent="RayCasts"]
position = Vector2(10, 10)
target_position = Vector2(0, 20)

[node name="RayCastRight" type="RayCast2D" parent="RayCasts"]
position = Vector2(10, 10)
target_position = Vector2(20, 0)
